# FramePack-FastAPI

./: .dockerignore  .gitignore  Dockerfile  README_DOCKER.md  README_DOCKER_REVISED.md  api_thumbnail_plan.md  docker-build.sh  docker-compose.yml  docker-run.sh  integration_plan.md  job_queue.json  pyproject.toml  quick_prompts.json  requirements.txt  start_server.sh  test_image_api.py
api/: api.py  image_models.py  queue_manager.py  settings.py  worker.py  worker_image.py
diffusers_helper/: memory.py
tests/: test_api.py  test_image_api.py
