[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "framepack-fastapi"
version = "0.1.0"
description = "FramePack FastAPI with image and video generation"
authors = [
    {name = "FramePack Team"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=1.7.0",
    "aiofiles>=24.1.0",
    "av>=14.4.0",
    "diffusers>=0.33.1",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "flash-attn",
    "gradio>=5.33.0",
    "markupsafe>=3.0.2",
    "numpy>=2.1.2,<3.0.0",
    "opencv-contrib-python>=4.11.0.86",
    "peft>=0.15.2",
    "pillow>=11.0.0,<12.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "safetensors>=0.5.3",
    "sageattention>=1.0.6",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "torchsde>=0.2.6",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "uvicorn[standard]>=0.34.3",
    "watchdog>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "diffusers>=0.24.0",
    "accelerate>=0.24.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "gradio>=4.0.0",
    "watchdog>=3.0.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv.sources]
flash-attn = { path = "archive/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiTRUE-cp310-cp310-linux_x86_64.whl" }
